tearchan-gfx/src/batch/v2/snapshots/tearchan_gfx__batch__v2__object_manager__test__events-2.snap
---
source: tearchan-gfx/src/batch/v2/object_manager.rs
expression: events

---
[
    Write {
        id: BatchObjectId(
            0,
        ),
        attribute: 1,
    },
    Write {
        id: BatchObjectId(
            1,
        ),
        attribute: 0,
    },
]
