tearchan-gfx/src/batch/v2/snapshots/tearchan_gfx__batch__v2__object_manager__test__events-3.snap
---
source: tearchan-gfx/src/batch/v2/object_manager.rs
expression: events

---
[
    Remove {
        id: BatchObjectId(
            0,
        ),
    },
    Clear {
        pointer: BatchBufferPointer {
            first: 0,
            len: 1,
        },
    },
]
