tearchan-gfx/src/batch/v2/snapshots/tearchan_gfx__batch__v2__object_manager__test__events-4.snap
---
source: tearchan-gfx/src/batch/v2/object_manager.rs
expression: events

---
[
    Remove {
        id: BatchObjectId(
            1,
        ),
    },
]
