tearchan-gfx/src/batch/v2/snapshots/tearchan_gfx__batch__v2__object_manager__test__resize_event.snap
---
source: tearchan-gfx/src/batch/v2/object_manager.rs
expression: convert_events(&mut manager)

---
[
    Add {
        id: BatchObjectId(
            0,
        ),
    },
    Write {
        id: BatchObjectId(
            0,
        ),
        attribute: 0,
    },
    Write {
        id: BatchObjectId(
            0,
        ),
        attribute: 1,
    },
    Write {
        id: BatchObjectId(
            0,
        ),
        attribute: 2,
    },
]
